--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,20 @@
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
-        "p2made/yii2-sb-admin-theme": "^2.5"
+        "p2made/yii2-sb-admin-theme": "^2.5",
+        "kartik-v/yii2-dynagrid": "@dev",
+        "kartik-v/yii2-widget-activeform": "@dev",
+        "kartik-v/yii2-markdown": "dev-master",
+        "froala/yii2-froala-editor": "^2.6.0",
+        "kartik-v/yii2-widget-select2": "@dev",
+        "kartik-v/yii2-widget-depdrop": "@dev",
+        "kartik-v/yii2-widget-datepicker": "@dev",
+        "dmstr/yii2-adminlte-asset": "^2.1",
+        "kartik-v/yii2-grid": "@dev",
+        "kartik-v/yii2-widget-alert": "*",
+        "kartik-v/yii2-widget-growl": "*",
+        "kartik-v/yii2-dialog": "@dev",
+        "kartik-v/yii2-detail-view": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
